# mtg-rl-tools

./: .gitignore  Arena Mirror.bat  LICENSE  README.md
.github/workflows/: fix-pr32-review.yml  patch-trust-audit.yml  python-mirror-tests.yml  python-training-tests.yml  rebuild-rssm-branch.yml  resolve-pr39-review.yml  temporary-pr-maintenance.yml
cloudflare/: README.md
cloudflare/ingest-worker/: wrangler.toml
docs/: ACTION_SPACE_RESEARCH.md  BELIEF_SUPERVISION.md  DRAFT_MODELS.md  EXPERT_COST_PROTOCOL.md  JEPA_PLAN.md  MTG_CAUSAL_RL_PARITY.md  RESEARCH_ARCHITECTURE.md  RSSM_DIAGNOSTICS.md  RUNNING.md  TARGET_FUNGIBILITY.md  TRUST_AUDIT_CHECKLIST.md  TRUST_GATES.md  decision-record-schema.md
examples/: basic_deck.txt  random_agent.py  run_selfplay.py
python/: README.md  pyproject.toml
python/magic_cabt/: __init__.py  arena_log.py  card_data.py  dataset.py  local_model.py  protocol.py
python/magic_cabt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/magic_cabt/agents/: __init__.py  base.py  baseline_policy.py  bc_agent.py  heuristic_agent.py  random_agent.py
python/magic_cabt/analysis/: __init__.py  backfill.py  baselines.py  belief_scorer.py  cache.py  compare.py  draft_outlook.py  schema.py  scorer.py  suite.py  worker.py
python/magic_cabt/arena_mirror/: __init__.py  __main__.py  cards.py  draft_advisor.py  follower.py  gui.py  local_model_hooks.py  metadata.py  mirror.py  options.py  recorder.py  replay.py  session.py  tracker.py
python/magic_cabt/eval/: __init__.py  play.py
python/magic_cabt/models/: __init__.py  bc_policy.py  belief.py  causal.py  configs.py  draft_model.py  embeddings.py  information_state.py  jepa_model.py  rssm.py  state_utils.py  structured_config.py  structured_jepa.py  structured_tensorizer.py  torch_ranker.py  visibility.py
python/magic_cabt/play/: __init__.py  human_vs_agent.py
python/magic_cabt/replay/: __init__.py  annotate.py
python/magic_cabt/research/: __init__.py  benchmark.py  cli.py  experiment.py  expert_cost.py  trust_audit.py  trust_audit_cli.py  trust_hardening.py
python/magic_cabt/rl/: __init__.py  env.py
python/magic_cabt/server/: __init__.py  agent_service.py
python/magic_cabt/training/: __init__.py  action_abstraction.py  action_dedup.py  action_entropy.py  analyze_actions.py  build_draft_dataset.py  build_manifest.py  build_transitions.py  causal.py  compile_il.py  eval_bc.py  features.py  io.py  local_evolve.py  manifest.py  records.py  sequence_data.py  train_bc.py  train_belief_state.py  train_belief_state_cli.py  train_draft.py  train_information_state.py  train_information_state_cli.py  train_jepa.py  train_ranker.py  train_reliable.py  train_rssm.py  train_structured_bc.py  validate_dataset.py
python/magic_cabt/upload/: __init__.py  bundle.py  cli.py  client.py  redact.py
python/tests/: test_action_abstraction.py  test_action_dedup.py  test_agent_service.py  test_agents.py  test_analysis.py  test_analysis_baselines.py  test_analysis_compare.py  test_arena_log.py  test_arena_log_draft.py  test_arena_mirror.py  test_arena_mirror_e2e.py  test_bc_eval.py  test_bc_training.py  test_belief_state.py  test_build_draft_dataset.py  test_build_transitions.py  test_card_data.py  test_card_identity.py  test_compile_il.py  test_dataset.py  test_decklist.py  test_draft_live.py  test_draft_model.py  test_eval_play.py  test_information_state.py  test_local_evolve.py  test_protocol_live.py  test_recurrent_backfill.py  test_replay_analysis_backfill.py  test_replay_namer.py  test_research_benchmark.py  test_research_experiment.py  test_research_expert_cost.py  test_rl_env.py  test_rssm.py  test_sequence_data.py  test_structured_jepa.py  test_train_jepa_data.py  test_train_jepa_reliable.py  test_train_ranker.py  (+7 more)
python/tests/fixtures/: card_data_response.json  dataset_sample.jsonl  global_card_data_response.json  repository_card_data_response.json  validate_deck_response.json
scripts/: arena-mirror-gui.ps1  arena-mirror.ps1  create-desktop-shortcut.ps1  run-cabt-adapter-tests.sh  setup-arena-mirror.ps1
tools/mtgo_video_toolkit/mtg_state_contract/: README.md  pyproject.toml
tools/mtgo_video_toolkit/mtg_state_contract/src/mtg_state_contract/: __init__.py  adapter.py  compare.py  formatter.py  jsonl.py  schema.py
tools/mtgo_video_toolkit/mtg_state_contract/tests/: test_contract.py
tools/mtgo_video_toolkit/mtgo_native_logs/: README.md  pyproject.toml
tools/mtgo_video_toolkit/mtgo_native_logs/src/mtgo_native_logs/: __init__.py  cli.py  discovery.py  parser.py
tools/mtgo_video_toolkit/mtgo_native_logs/tests/: test_native_logs.py
tools/mtgo_video_toolkit/mtgo_pipeline_coordinator/: README.md  pyproject.toml
tools/mtgo_video_toolkit/mtgo_pipeline_coordinator/src/mtgo_pipeline_coordinator/: __init__.py  assemble.py  batch.py  bundle.py  cli.py  doctor.py
tools/mtgo_video_toolkit/mtgo_pipeline_coordinator/tests/: test_coordinator.py
tools/mtgo_video_toolkit/mtgo_video_acquisition/: README.md  pyproject.toml
tools/mtgo_video_toolkit/mtgo_video_acquisition/src/mtgo_video_acquisition/: __init__.py  cli.py  manifest.py  ytdlp.py
tools/mtgo_video_toolkit/mtgo_video_acquisition/tests/: test_acquisition.py
tools/mtgo_video_toolkit/mtgo_video_parser/: README.md  pyproject.toml
tools/mtgo_video_toolkit/mtgo_video_parser/src/mtgo_video_parser/: __init__.py  actions.py  calibration.py  carddb.py  cli.py  detector.py  layout.py  ocr.py  perception.py  pipeline.py  recognition.py  structured_vision.py  tracker.py  types.py  video.py
tools/mtgo_video_toolkit/mtgo_video_parser/src/mtgo_video_parser/profiles/: __init__.py  mocs_2016_oldclient.yaml  mtgo_1080p_standard.yaml  mtgo_modern_rawclient.yaml
tools/mtgo_video_toolkit/mtgo_video_parser/tests/: test_video_parser.py
tools/mtgo_video_toolkit/xmage_state_follower/: README.md  pyproject.toml
tools/mtgo_video_toolkit/xmage_state_follower/src/xmage_state_follower/: __init__.py  cli.py  follower.py  matcher.py  protocol.py
tools/mtgo_video_toolkit/xmage_state_follower/tests/: test_follower.py
(+164 files in other folders)
