[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-cabt"
version = "0.1.0"
description = "Python tooling for CABT-style Magic: The Gathering RL and imitation-learning workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "NMaass" }]
keywords = ["magic-the-gathering", "reinforcement-learning", "imitation-learning", "xmage", "mtg-arena"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = []
arena = []
torch = ["torch>=2.2", "numpy"]
jepa = ["torch>=2.2", "numpy"]
semantic = ["torch>=2.2", "numpy", "sentence-transformers"]

[project.scripts]
magic-cabt-validate = "magic_cabt.training.validate_dataset:main"
magic-cabt-compile-il = "magic_cabt.training.compile_il:main"
magic-cabt-train-bc = "magic_cabt.training.train_bc:main"
magic-cabt-eval-play = "magic_cabt.eval.play:main"
magic-cabt-replay-annotate = "magic_cabt.replay.annotate:main"
magic-cabt-arena-mirror = "magic_cabt.arena_mirror.__main__:main"
magic-cabt-build-manifest = "magic_cabt.training.build_manifest:main"
magic-cabt-analyze-actions = "magic_cabt.training.analyze_actions:main"
magic-cabt-eval-bc = "magic_cabt.training.eval_bc:main"
magic-cabt-play = "magic_cabt.play.human_vs_agent:main"
magic-cabt-upload = "magic_cabt.upload.cli:main"
magic-cabt-agent-service = "magic_cabt.server.agent_service:main"
magic-cabt-train-ranker = "magic_cabt.training.train_ranker:main"
magic-cabt-build-transitions = "magic_cabt.training.build_transitions:main"
magic-cabt-train-jepa = "magic_cabt.training.train_reliable:main"
magic-cabt-train-structured-bc = "magic_cabt.training.train_structured_bc:main"
magic-cabt-train-information-state = "magic_cabt.training.train_information_state_cli:main"
magic-cabt-train-belief-state = "magic_cabt.training.train_belief_state_cli:main"
magic-cabt-train-rssm = "magic_cabt.training.train_rssm:main"
magic-cabt-local-evolve = "magic_cabt.training.local_evolve:main"
magic-cabt-local-model = "magic_cabt.local_model:main"
magic-cabt-build-draft-dataset = "magic_cabt.training.build_draft_dataset:main"
magic-cabt-train-draft = "magic_cabt.training.train_draft:main"
magic-cabt-draft-outlook = "magic_cabt.analysis.draft_outlook:main"
magic-cabt-compare-models = "magic_cabt.analysis.compare:main"
magic-cabt-compare-suite = "magic_cabt.analysis.suite:main"
magic-cabt-research = "magic_cabt.research.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["magic_cabt*"]

[tool.setuptools]
include-package-data = true
