[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-state-contract"
version = "0.1.0"
description = "Canonical symbolic Magic game-state schema, formatter, and semantic comparator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "NMaass / mtg-rl-tools contributors"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
